--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.1.*",
         "symfony/runtime": "7.1.*",
+        "symfony/twig-bundle": "7.1.*",
+        "symfony/ux-twig-component": "^2.23",
         "symfony/yaml": "7.1.*"
     },
     "require-dev": {
